# Studen_rates_application

./: .gitignore
Student_rates_server/: CMakeLists.txt  main.cpp
Student_rates_server/doc/docbook/: annotated.xml  classmyserver.xml  dir_6072d4641739f703d309a89e122cdc30.xml  dir_7a14250a3e2697cc250c8556389738bc.xml  dir_87e0a54888a4e6058014138a00467d3f.xml  dir_8e9ce8149fdcf3fc6db768e3ce6ffae9.xml  dir_d522931ffa1371640980b621734a4381.xml  dir_f396504afdc959660871b003fa10164d.xml  dir_f7c8d6feed019affbbbac7d9835ecfd6.xml  dir_f997198f5ca5ee7e33251c4c36e41410.xml  index.xml  main_8cpp.xml  server_8cpp.xml  server_8h.xml
Student_rates_server/doc/html/: annotated.html  annotated_dup.js  classes.html  classmyserver-members.html  classmyserver.html  classmyserver.js  dir_6072d4641739f703d309a89e122cdc30.html  dir_6072d4641739f703d309a89e122cdc30.js  dir_7a14250a3e2697cc250c8556389738bc.html  dir_7a14250a3e2697cc250c8556389738bc.js  dir_87e0a54888a4e6058014138a00467d3f.html  dir_8e9ce8149fdcf3fc6db768e3ce6ffae9.html  dir_8e9ce8149fdcf3fc6db768e3ce6ffae9.js  dir_d522931ffa1371640980b621734a4381.html  dir_d522931ffa1371640980b621734a4381.js  dir_f396504afdc959660871b003fa10164d.html  dir_f7c8d6feed019affbbbac7d9835ecfd6.html  dir_f997198f5ca5ee7e33251c4c36e41410.html  dir_f997198f5ca5ee7e33251c4c36e41410.js  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  navtreedata.js  navtreeindex0.js  server_8cpp.html  server_8h.html  server_8h_source.html
Student_rates_server/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
Student_rates_server/doc/latex/: annotated.tex  classmyserver.tex  dir_6072d4641739f703d309a89e122cdc30.tex  dir_7a14250a3e2697cc250c8556389738bc.tex  dir_87e0a54888a4e6058014138a00467d3f.tex  dir_8e9ce8149fdcf3fc6db768e3ce6ffae9.tex  dir_d522931ffa1371640980b621734a4381.tex  dir_f396504afdc959660871b003fa10164d.tex  dir_f7c8d6feed019affbbbac7d9835ecfd6.tex  dir_f997198f5ca5ee7e33251c4c36e41410.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.tex  server_8cpp.tex  server_8h.tex
Student_rates_server/doc/man/man3/: C__Users_.3  C__Users_Danila_.3  C__Users_Danila_Documents_.3  C__Users_Danila_Documents_Student_rates_server_.3  C__Users_Danila_Documents_Student_rates_server_server_.3  main.cpp.3  myserver.3  server.cpp.3  server.h.3
Student_rates_server/doc/rtf/: dir_6072d4641739f703d309a89e122cdc30.rtf  dir_7a14250a3e2697cc250c8556389738bc.rtf  dir_87e0a54888a4e6058014138a00467d3f.rtf  dir_8e9ce8149fdcf3fc6db768e3ce6ffae9.rtf  dir_d522931ffa1371640980b621734a4381.rtf  dir_f396504afdc959660871b003fa10164d.rtf  dir_f7c8d6feed019affbbbac7d9835ecfd6.rtf  dir_f997198f5ca5ee7e33251c4c36e41410.rtf  refman.rtf
Student_rates_server/doc/xml/: classmyserver.xml  dir_6072d4641739f703d309a89e122cdc30.xml  dir_7a14250a3e2697cc250c8556389738bc.xml  dir_87e0a54888a4e6058014138a00467d3f.xml  dir_8e9ce8149fdcf3fc6db768e3ce6ffae9.xml  dir_d522931ffa1371640980b621734a4381.xml  dir_f396504afdc959660871b003fa10164d.xml  dir_f7c8d6feed019affbbbac7d9835ecfd6.xml  dir_f997198f5ca5ee7e33251c4c36e41410.xml  index.xml  main_8cpp.xml  server_8cpp.xml  server_8h.xml
student_rates_client/: CMakeLists.txt  input.cpp  input.h  input.ui  main.cpp  rateswindow.cpp  rateswindow.h  rateswindow.ui
student_rates_client/doc/docbook/: annotated.xml  class_input.xml  class_main_window.xml  class_rates_page.xml  dir_9d9ea94a798ef0d951bf7f36e3aa4fa2.xml  dir_f396504afdc959660871b003fa10164d.xml  index.xml  input_8cpp.xml  input_8h.xml  main_8cpp.xml  mainwindow_8cpp.xml  mainwindow_8h.xml  namespace_ui.xml  rateswindow_8cpp.xml  rateswindow_8h.xml
student_rates_client/doc/html/: annotated.html  class_input-members.html  class_input.html  class_main_window-members.html  class_main_window.html  class_rates_page-members.html  class_rates_page.html  classes.html  dir_9d9ea94a798ef0d951bf7f36e3aa4fa2.html  dir_f396504afdc959660871b003fa10164d.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  input_8cpp.html  input_8h.html  input_8h_source.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  namespace_ui.html  namespaces.html  rateswindow_8cpp.html  rateswindow_8h.html  rateswindow_8h_source.html
student_rates_client/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
student_rates_client/doc/latex/: annotated.tex  class_input.tex  class_main_window.tex  class_rates_page.tex  dir_9d9ea94a798ef0d951bf7f36e3aa4fa2.tex  dir_f396504afdc959660871b003fa10164d.tex  files.tex  hierarchy.tex  input_8cpp.tex  input_8h.tex  main_8cpp.tex  mainwindow_8cpp.tex  mainwindow_8h.tex  namespace_ui.tex  namespaces.tex  rateswindow_8cpp.tex  rateswindow_8h.tex  refman.tex
student_rates_client/doc/man/man3/: C__Users_Danila_Documents_.3  C__Users_Danila_Documents_student_rates_client_.3  Input.3  MainWindow.3  RatesPage.3  Ui.3  input.cpp.3  input.h.3  main.cpp.3  mainwindow.cpp.3  mainwindow.h.3  rateswindow.cpp.3  rateswindow.h.3
student_rates_client/doc/rtf/: dir_9d9ea94a798ef0d951bf7f36e3aa4fa2.rtf  dir_f396504afdc959660871b003fa10164d.rtf  refman.rtf
student_rates_client/doc/xml/: class_input.xml  class_main_window.xml  class_rates_page.xml  dir_9d9ea94a798ef0d951bf7f36e3aa4fa2.xml  dir_f396504afdc959660871b003fa10164d.xml  index.xml  input_8cpp.xml  input_8h.xml  main_8cpp.xml  mainwindow_8cpp.xml  mainwindow_8h.xml  namespace_ui.xml  rateswindow_8cpp.xml  rateswindow_8h.xml
